--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,18 +1,18 @@
 {
     "name": "Restaurant Map",
     "short_name": "RestoMap",
-    "start_url": "/index.html",
+    "start_url": "index.html",
     "display": "standalone",
     "background_color": "#ffffff",
     "theme_color": "#4CAF50",
     "icons": [
         {
-            "src": "/icons/icon-192x192.png",
+            "src": "icons/icon-192x192.png",
             "type": "image/png",
             "sizes": "192x192"
         },
         {
-            "src": "/icons/icon-512x512.png",
+            "src": "icons/icon-512x512.png",
             "type": "image/png",
             "sizes": "512x512"
         }
